@startuml

class Article {
    -id:int
    -titre :string
    -contenu :text
    -createdAt:datetime
    -slug:string
    -isPublie :bool
}

class Categorie {
    -id:int
    -titre:string
    -slug :string
}

class Commentaire {
    -id:int
    -contenu :text
    -createdAt :datetime
}

class Utilisateur {
    -id :int
    -nom :string
    -prenom :string
    -pseudo :string
}
class Contact {
    -id : int
    -nom :string
    -prenom :string
    -email : string
    -objet :string
    -contenu :string
    -createAt : Datetime
}
Article "0..*"-- "0..1" Categorie
Article "1..1"--"0..*" Commentaire
Commentaire "0..*"-- "0..1"Utilisateur
@enduml